objects/EUR_CRM_Wine_Spirits__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Ancillary_Product_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ancillary Product Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Product_Type_Name__c</fullName>
        <label>Product Type Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SPIRITS</fullName>
                </value>
                <value>
                    <fullName>WINE</fullName>
                </value>
                <value>
                    <fullName>NOT APPLICABLE</fullName>
                </value>
                <value>
                    <fullName>NON ALCOHOLIC BEVERAGES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Wine_Spirits_Code__c</fullName>
        <label>Wine/Spirits Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Wine/Spirits (EU)</label>
    <listViews>
        <fullName>All_GB</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Wine_Spirits_Code__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Wine_Spirits__c.EUR_GB_Wine_Spirits</value>
        </filters>
        <label>All GB</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BE_Wine_Spirits</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Wine_Spirits_Code__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Wine_Spirits__c.EUR_BE_Wine_Spirits</value>
        </filters>
        <label>All BE Wine/Spirits</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CH_Wine_Spirits</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Is_Ancillary_Product_Item__c</columns>
        <columns>EUR_CRM_Wine_Spirits_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Wine_Spirits__c.EUR_CH_Wine_Spirits</value>
        </filters>
        <label>CH Wine/Spirits</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_CH</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_BG_All_Wine_Spirits_View</fullName>
        <columns>OBJECT_ID</columns>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Wine_Spirits__c.EUR_BG_Wine_Spirits</value>
        </filters>
        <label>BG Wine/Spirits</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_PT_All_Wine_Spirits_View</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Is_Ancillary_Product_Item__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Product_Type_Name__c</columns>
        <columns>EUR_CRM_Wine_Spirits_Code__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Wine_Spirits__c.EUR_PT_Wine_Spirits</value>
        </filters>
        <label>EUR PT All Wine/Spirits View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_PT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_DE_Wine_Spirits</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Is_Ancillary_Product_Item__c</columns>
        <columns>EUR_CRM_Wine_Spirits_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Wine_Spirits__c.EUR_DE_Wine_Spirits</value>
        </filters>
        <label>DE Wine/Spirits</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_DK_Wine_Spirits</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Wine_Spirits__c.EUR_DK_Wine_Spirits</value>
        </filters>
        <label>DK Wine/Spirits</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_FI_Wine_Spirits</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Is_Ancillary_Product_Item__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Wine_Spirits__c.EUR_FI_Wine_Spirits</value>
        </filters>
        <label>FI Wine/Spirits</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_FI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_MA_Wine_Spirits</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Is_Ancillary_Product_Item__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Product_Type_Name__c</columns>
        <columns>EUR_CRM_Wine_Spirits_Code__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Wine_Spirits__c.EUR_MA_Wine_Spirits</value>
        </filters>
        <label>MA Wine/Spirits</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_MA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_NG_Wine_Spirits</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Wine_Spirits_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Wine_Spirits__c.EUR_NG_Wine_Spirits</value>
        </filters>
        <label>NG Wine/Spirits</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_NG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_ZA_Wine_Spirits</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Wine_Spirits_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Wine_Spirits__c.EUR_ZA_Wine_Spirits</value>
        </filters>
        <label>ZA Wine/Spirits</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RU_All_Wine_Spirits</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Wine_Spirits__c.EUR_RU_Wine_Spirits</value>
        </filters>
        <label>RU All Wine/Spirits</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_RU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Wine/Spirits Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wine/Spirits (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_AO_Wine_Spirits</fullName>
        <active>true</active>
        <label>EUR AO Wine/Spirits</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AT_Wine_Spirits</fullName>
        <active>true</active>
        <label>EUR AT Wine/Spirits</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_Wine_Spirits</fullName>
        <active>true</active>
        <label>EUR BE Wine/Spirits</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Wine_Spirits</fullName>
        <active>true</active>
        <label>EUR BG Wine/Spirits</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CH_Wine_Spirits</fullName>
        <active>true</active>
        <label>EUR CH Wine/Spirits</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Wine_Spirits</fullName>
        <active>true</active>
        <label>EUR DE Wine/Spirits</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Wine_Spirits</fullName>
        <active>true</active>
        <description>Record Type for Products Wine/Spirits</description>
        <label>EUR DK Wine/Spirits</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_EE_Wine_Spirits</fullName>
        <active>true</active>
        <label>EUR EE  Wine/Spirits</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_Wine_Spirits</fullName>
        <active>true</active>
        <label>EUR FI Wine/Spirits</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_GB_Wine_Spirits</fullName>
        <active>true</active>
        <label>GB Wine/Spirits</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_KE_Wine_Spirits</fullName>
        <active>true</active>
        <label>EUR KE Wine/Spirits</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LT_Wine_Spirits</fullName>
        <active>true</active>
        <label>EUR LT Wine/Spirits</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LV_Wine_Spirits</fullName>
        <active>true</active>
        <label>EUR LV Wine/Spirits</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_Wine_Spirits</fullName>
        <active>true</active>
        <label>EUR MA Wine/Spirits</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NG_Wine_Spirits</fullName>
        <active>true</active>
        <label>EUR NG Wine/Spirits</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PRT_Wine_Spirits</fullName>
        <active>true</active>
        <label>EUR_PRT_Wine_Spirits</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Wine_Spirits</fullName>
        <active>true</active>
        <label>EUR PT Wine/Spirits</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Wine_Spirits</fullName>
        <active>true</active>
        <label>EUR RU Wine/Spirits</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_Wine_Spirits</fullName>
        <active>true</active>
        <label>EUR ZA Wine/Spirits</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>